Se agregó el id del usuario a las coordenadas

--- a/src/app/components/dashboard/calificaciones/calificaciones.component.html
+++ b/src/app/components/dashboard/calificaciones/calificaciones.component.html
@@ -1,23 +1,22 @@
 <app-side-menu>
     <div class="container table-responsive text-center">
-        <h1 class="text-center mt-5">Completados</h1>
+        <h1 class="text-center mt-5">Calificaciones</h1>
         
         <table class="table table-hover  mt-5">
           <thead class="fondo3">
             <tr>
-              <th>Pedidos</th>
-              <th>Descripción</th>
-              <th>Costo</th>
-              <th>Encuesta</th>
+              <th>Calificación</th>
+              <th>Ponderación</th>
+              <th>Comentario</th>
+             
             </tr>
           </thead>
           <tbody>
             <tr>
               <td>1</td>
-              <td>5 Girasoles</td>
-              <td>$ 50.00 MXN</td>
-              <td><button class="btn btn-outline-success mr-2">Enviar</button>
-             </td>
+              <td>10</td>
+              <td>Buen Servicio</td>
+             
             </tr>
           
           </tbody>
