--- a/src/app/components/dashboard/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard/dashboard.component.html
@@ -1,31 +1,2 @@
-<app-side-menu>
- <!-- Inicia tabla que contiene los Tours-->
- 
- <table class="table table-hover table-responsive-lg text-center" style="margin-top: 6%">
-    <thead class="fondo2">
-      <tr>
-        <th scope="col">Tour</th>
 
-        <th scope="col">Precio</th>
-
-        <th scope="col">Lugar</th>
-
-        <th scope="col">Editar</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <th scope="row">ssssss</th>
-        <td>sssss</td>
-        <td>sssssss</td>
-
-        <!-- Columna de enlaces-->
-        <td class="text-center action-block">
-       
-        </td>
-      </tr>
-    </tbody>
-    <!-- Termina Tabla que contiene los Tours-->
-  </table>
-</app-side-menu>
- 
+<app-map-box></app-map-box>
