--- a/src/app/components/dashboard/side-menu/side-menu.component.html
+++ b/src/app/components/dashboard/side-menu/side-menu.component.html
@@ -33,9 +33,9 @@
                 </a>
             </li>
             <li>
-                <a href="#">
+                <a routerLink="/calificaciones">
                     <i class="glyphicon glyphicon-paperclip"></i>
-                    Calificacion
+                    Calificaciones
                 </a>
             </li>
             <li>
@@ -48,7 +48,7 @@
     </nav>
 
     <!-- Page Content Holder -->
-    <div id="content">
+    <div class="container" style="height:100vh;"> 
 
       <ng-content></ng-content>
     </div>
