--- a/src/app/components/dashboard/solicitudes/solicitudes.component.html
+++ b/src/app/components/dashboard/solicitudes/solicitudes.component.html
@@ -1,4 +1,28 @@
-<app-side-menu><p>
-  solicitudes works!
-</p>
+<app-side-menu>
+  <div class="container table-responsive text-center">
+    <h1 class="text-center mt-5">Mis Solicitudes</h1>
+    
+    <table class="table table-hover  mt-5">
+      <thead class="fondo3">
+        <tr>
+          <th>Solicitudes</th>
+          <th>Descripción</th>
+          <th>Costo</th>
+          <th>Estado</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>1</td>
+          <td>5 Girasoles</td>
+          <td>$ 50.00 MXN</td>
+          <td><button class="btn btn-outline-success mr-2">Aceptar</button>
+          <button class="btn btn-outline-danger">Rechazar</button></td>
+        </tr>
+      
+      </tbody>
+    </table>
+    
+  </div>
+
 </app-side-menu>
