--- a/src/app/components/dashboard/pedidos/pedidos.component.html
+++ b/src/app/components/dashboard/pedidos/pedidos.component.html
@@ -1,5 +1,27 @@
 <app-side-menu>
-<p>
-  pedidos works!
-</p>
+    <div class="container table-responsive text-center">
+        <h1 class="text-center mt-5">Mis Pedidos</h1>
+        
+        <table class="table table-hover  mt-5">
+          <thead class="fondo3">
+            <tr>
+              <th>Pedidos</th>
+              <th>Descripción</th>
+              <th>Costo</th>
+              <th>Estado</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>1</td>
+              <td>5 Girasoles</td>
+              <td>$ 50.00 MXN</td>
+              <td><button class="btn btn-outline-success mr-2">Entregar</button>
+             </td>
+            </tr>
+          
+          </tbody>
+        </table>
+        
+      </div>
 </app-side-menu>
