--- a/src/app/components/dashboard/side-menu/side-menu.component.scss
+++ b/src/app/components/dashboard/side-menu/side-menu.component.scss
@@ -88,9 +88,9 @@ a, a:hover, a:focus {
   }
   
   #content {
-    padding: 20px;
+    padding: 30px;
     min-height: 100vh;
-    min-width: 100vh;
+    width: 100vh;
     transition: all 0.3s;
   }
   
@@ -332,12 +332,6 @@ a, a:hover, a:focus {
   a.article, a.article:hover {
     background: #6d7fcc !important;
     color: #fff !important;
-  }
-  
-  #content {
-    padding: 20px;
-    min-height: 100vh;
-    transition: all 0.3s;
   }
   
   @media (max-width: 768px) {
