--- a/src/app/components/dashboard/pedidos/pedidos.component.html
+++ b/src/app/components/dashboard/pedidos/pedidos.component.html
@@ -16,7 +16,7 @@
               <td>1</td>
               <td>5 Girasoles</td>
               <td>$ 50.00 MXN</td>
-              <td><button class="btn btn-outline-success mr-2">Entregar</button>
+              <td><button class="btn btn-outline-success mr-2" (click)="sendNotification()">Entregar</button>
              </td>
             </tr>
           
