--- a/src/app/components/dashboard/pedidos/pedidos.component.html
+++ b/src/app/components/dashboard/pedidos/pedidos.component.html
@@ -1,27 +1,33 @@
 <app-side-menu>
-    <div class="container table-responsive text-center">
-        <h1 class="text-center mt-5">Mis Pedidos</h1>
-        
-        <table class="table table-hover  mt-5">
-          <thead class="fondo3">
-            <tr>
-              <th>Pedidos</th>
-              <th>Descripción</th>
-              <th>Costo</th>
-              <th>Estado</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>1</td>
-              <td>5 Girasoles</td>
-              <td>$ 50.00 MXN</td>
-              <td><button class="btn btn-outline-success mr-2" (click)="sendNotification()">Entregar</button>
-             </td>
-            </tr>
-          
-          </tbody>
-        </table>
-        
-      </div>
+  <div class="container table-responsive text-center">
+    <h1 class="text-center mt-5">Mis Pedidos</h1>
+    
+    <table class="table table-hover  mt-5">
+      <thead class="fondo3">
+        <tr>
+          <th>Pedidos</th>
+          <th>Descripción</th>
+          <th>Costo</th>
+          <th>Estado</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let pedido of pedidos; let i=index">
+          <td>{{i+1}}</td>
+          <div *ngFor="let descripcion of pedido.data.arregloFloral" class="text-center">
+          <td  class="text-center"><b>Flor: </b>{{descripcion.nombreF}}  <b>*</b>{{descripcion.count}}</td>
+        </div>
+          <td>{{pedido.data.total}}</td>
+          <td><button *ngIf="!pedido.data.entregado" class="btn btn-outline-success mr-2" (click)="sendNotification(pedido.data.token, pedido.id)">Entregar</button>
+          <div *ngIf="pedido.data.entregado" class="alert alert-success" role="alert">
+            Entregado
+          </div></td>
+
+        </tr>
+      
+      </tbody>
+    </table>
+    
+  </div>
+
 </app-side-menu>
